src/styles/globals.scss
@tailwind base;
@tailwind components;
@tailwind utilities;

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
  /* transition: all 0.25s ease; */
  @apply transition-colors;
  @apply duration-500;
}

::-webkit-scrollbar {
  // width: 8px;
  width: 0px;
}
::-webkit-scrollbar-track {
  // background-color: #151515;
  background-color: transparent
}

::-webkit-scrollbar-thumb {
  // background-color: #9c9c9c;
  // border-radius: 5px;
  background-color: transparent;
}

/* Firefox */
::-moz-scrollbar {
  // width: 8px;
  width: 0px;
}

::-moz-scrollbar-track {
  // background-color: #151515;
  background-color: transparent
}

::-moz-scrollbar-thumb {
  // background-color: #9c9c9c;
  // border-radius: 5px;
  background-color: transparent;
}

.description {
  clip-path: inset(50% 0 50%);
  transition: clip-path 0.4s;
}
.perspective {
  perspective: 1200px;
  perspective-origin: left;
}

